# backend/docs/swagger.yaml
@@ -77,7 +77,7 @@ paths:
       consumes:
       - application/json
       description: Retrieves all available cocktails
-      operationId: Cocktail_Get
+      operationId: Get_Cocktails
       parameters:
       - description: exclude ingredients
         in: query
@@ -90,7 +90,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/vms.CocktailVm'
+              $ref: '#/definitions/vms.DetailedCocktailVm'
             type: array
       summary: Gets all cocktails
       tags:
@@ -99,7 +99,7 @@ paths:
       consumes:
       - application/json
       description: Creates a new cocktail
-      operationId: Cocktail_Create
+      operationId: Create_Cocktail
       parameters:
       - description: Cocktail object
         in: body
